# opm-ecl-test

./: CMakeLists - for use of static opm library.txt  CMakeLists.txt  test-eclfile.cpp
